5.5.3
-Orbital reflectors now suppress Cold, in addition to poor light and hot

5.5.2
-Kletka sims can now be improved, ported heat functionality from live. Disabled by default (as it was in 5.0.0)
-Kletka sims upkeep reduced to 64 (live equivalent) from 300 (!!!)

5.5.1
-initial port