@@ -1,6 +1,6 @@
 <component name="ProjectRunConfigurationManager">
   <configuration default="false" name="Run Starsector 0.95" type="Application" factoryName="Application">
-    <option name="ALTERNATIVE_JRE_PATH" value="$PROJECT_DIR$/../../jre" />
+    <option name="ALTERNATIVE_JRE_PATH" value="1.7" />
     <option name="ALTERNATIVE_JRE_PATH_ENABLED" value="true" />
     <option name="MAIN_CLASS_NAME" value="com.fs.starfarer.StarfarerLauncher" />
     <module name="Terraforming and Station Construction" />
