@@ -23,6 +23,6 @@
     {
         "major":5,
         "minor":5,
-        "patch":2 # Can be a number, character or string (1, 2, a, b, "-RC2", etc)
+        "patch":3 # Can be a number, character or string (1, 2, a, b, "-RC2", etc)
     }
 }
