@@ -1,10 +1,10 @@
 {
 	"id":"TaSC Classic",
 	"name":"TaSC Classic",
-	"version":"5.5.2",
+	"version":"5.5.3",
 	"author": "boggled & Co.",
 	"description":"Terraform planets and build stations. Not compatible with standard TaSC",
-	"gameVersion":"0.95a-RC15",
+	"gameVersion":"0.95.1a-RC5",
 	"jars":["jar/BoggledTerraformingAndStationConstruction.jar"],
 	"modPlugin":"data.scripts.BoggledStationConstructionPlugin"
 }
